# tree-sitter-query-formatter

./: Cargo.toml  Makefile  README.md
.github/workflows/: deploy-gh-pages.yml
core/: Cargo.toml  README.md
core/src/: lib.rs  main.rs
core/tests/: integration_tests.rs
core/tests/fixtures/expected/: alternation.txt  anchor.txt  anonymous.txt  capture.txt  directive.txt  fields.txt  grouping_long.txt  missing.txt  negated.txt  nested.txt  predicate.txt  predicate_any_of.txt  predicate_end.txt  predicate_long.txt  quantification_question_mark.txt  simple.txt  supertype.txt  wildcard.txt
core/tests/fixtures/input/: alternation.txt  anchor_end.txt  anchor_end_node.txt  anonymous.txt  capture.txt  comment.txt  error.txt  fields.txt  grouping.txt  grouping_long.txt  grouping_quantification.txt  negated.txt  predicate_any_of.txt  predicate_end.txt  predicate_long.txt  quantification.txt  quantification_question_mark.txt  supertype.txt
wasm/: Cargo.toml
wasm/src/: lib.rs
wasm/wit/: host.wit
web/: .gitignore  index.html  main.ts  package-lock.json  package.json
